--- a/js/data/locale/pt/regionnames.json
+++ b/js/data/locale/pt/regionnames.json
@@ -1433,7 +1433,7 @@
             "code": "WBR"
         },
         {
-            "name": "Flandres",
+            "name": "Flanders",
             "code": "VLG"
         },
         {
@@ -3009,7 +3009,7 @@
             "code": "08"
         },
         {
-            "name": "Zanzan",
+            "name": "Zanzan²",
             "code": "ZZ"
         }
     ],
@@ -3119,140 +3119,140 @@
     ],
     "CN": [
         {
-            "name": "Anhui",
-            "code": "AH"
-        },
-        {
-            "name": "Chongqing",
-            "code": "CQ"
-        },
-        {
-            "name": "Fujian",
-            "code": "FJ"
-        },
-        {
-            "name": "Gansu",
-            "code": "GS"
-        },
-        {
-            "name": "Guangdong",
-            "code": "GD"
-        },
-        {
-            "name": "Guangxi",
-            "code": "GX"
-        },
-        {
-            "name": "Guizhou",
-            "code": "GZ"
-        },
-        {
-            "name": "Hainan",
-            "code": "HI"
-        },
-        {
-            "name": "Hebei",
-            "code": "HE"
-        },
-        {
-            "name": "Heilongjiang",
-            "code": "HL"
-        },
-        {
-            "name": "Henan",
-            "code": "HA"
-        },
-        {
-            "name": "Hong Kong",
-            "code": "HK"
-        },
-        {
-            "name": "Hubei",
-            "code": "HB"
-        },
-        {
-            "name": "Hunan",
-            "code": "HN"
-        },
-        {
-            "name": "Jiangsu",
-            "code": "JS"
-        },
-        {
-            "name": "Jiangxi",
-            "code": "JX"
-        },
-        {
-            "name": "Jilin",
-            "code": "JL"
-        },
-        {
-            "name": "Liaoning",
-            "code": "LN"
-        },
-        {
-            "name": "Macau",
-            "code": "MO"
-        },
-        {
-            "name": "Mongólia Interior",
-            "code": "NM"
-        },
-        {
-            "name": "Ningxia",
-            "code": "NX"
-        },
-        {
             "name": "Pequim",
-            "code": "BJ"
-        },
-        {
-            "name": "Província de Taiwan",
-            "code": "TW"
-        },
-        {
-            "name": "Qinghai",
-            "code": "QH"
-        },
-        {
-            "name": "Região Autônoma do Tibete",
-            "code": "XZ"
-        },
-        {
-            "name": "Shaanxi",
-            "code": "SN"
-        },
-        {
-            "name": "Shandong",
-            "code": "SD"
-        },
-        {
-            "name": "Shanxi",
-            "code": "SX"
-        },
-        {
-            "name": "Sichuan",
-            "code": "SC"
+            "code": "11"
         },
         {
             "name": "Tianjin",
-            "code": "TJ"
+            "code": "12"
+        },
+        {
+            "name": "Hebei",
+            "code": "13"
+        },
+        {
+            "name": "Shanxi",
+            "code": "14"
+        },
+        {
+            "name": "Mongólia Interior",
+            "code": "15"
+        },
+        {
+            "name": "Liaoning",
+            "code": "21"
+        },
+        {
+            "name": "Jilin",
+            "code": "22"
+        },
+        {
+            "name": "Heilongjiang",
+            "code": "23"
         },
         {
             "name": "Xangai",
-            "code": "SH"
+            "code": "31"
         },
         {
-            "name": "Xinjiang",
-            "code": "XJ"
-        },
-        {
-            "name": "Yunnan",
-            "code": "YN"
+            "name": "Jiangsu",
+            "code": "32"
         },
         {
             "name": "Zhejiang",
-            "code": "ZJ"
+            "code": "33"
+        },
+        {
+            "name": "Anhui",
+            "code": "34"
+        },
+        {
+            "name": "Fujian",
+            "code": "35"
+        },
+        {
+            "name": "Jiangxi",
+            "code": "36"
+        },
+        {
+            "name": "Shandong",
+            "code": "37"
+        },
+        {
+            "name": "Henan",
+            "code": "41"
+        },
+        {
+            "name": "Hubei",
+            "code": "42"
+        },
+        {
+            "name": "Hunan",
+            "code": "43"
+        },
+        {
+            "name": "Guangdong",
+            "code": "44"
+        },
+        {
+            "name": "Guangxi",
+            "code": "45"
+        },
+        {
+            "name": "Hainan",
+            "code": "46"
+        },
+        {
+            "name": "Chongqing",
+            "code": "50"
+        },
+        {
+            "name": "Sichuan",
+            "code": "51"
+        },
+        {
+            "name": "Guizhou",
+            "code": "52"
+        },
+        {
+            "name": "Yunnan",
+            "code": "53"
+        },
+        {
+            "name": "Região Autônoma do Tibete",
+            "code": "54"
+        },
+        {
+            "name": "Shaanxi",
+            "code": "61"
+        },
+        {
+            "name": "Gansu",
+            "code": "62"
+        },
+        {
+            "name": "Qinghai",
+            "code": "63"
+        },
+        {
+            "name": "Ningxia",
+            "code": "64"
+        },
+        {
+            "name": "Xinjiang",
+            "code": "65"
+        },
+        {
+            "name": "Taiwan",
+            "code": "71"
+        },
+        {
+            "name": "Hong Kong SAR China",
+            "code": "91"
+        },
+        {
+            "name": "Macau SAR China",
+            "code": "92"
         }
     ],
     "CO": [
@@ -4043,7 +4043,7 @@
             "code": "63"
         },
         {
-            "name": "Žďár nad Sázavou (distrito)",
+            "name": "Žďár nad Sázavou",
             "code": "635"
         },
         {
@@ -4921,7 +4921,7 @@
             "code": "IB"
         },
         {
-            "name": "Baleares²",
+            "name": "Balears Province",
             "code": "PM"
         },
         {
@@ -4945,11 +4945,15 @@
             "code": "CA"
         },
         {
+            "name": "Canary Islands",
+            "code": "CN"
+        },
+        {
             "name": "Cantábria",
             "code": "CB"
         },
         {
-            "name": "Cantábria²",
+            "name": "Cantabria Province",
             "code": "S"
         },
         {
@@ -5073,7 +5077,7 @@
             "code": "NC"
         },
         {
-            "name": "Navarra²",
+            "name": "Navarra",
             "code": "NA"
         },
         {
@@ -5196,6 +5200,10 @@
         }
     ],
     "FI": [
+        {
+            "name": "Åland Islands",
+            "code": "01"
+        },
         {
             "name": "Carélia do Sul",
             "code": "02"
@@ -5463,6 +5471,10 @@
             "code": "BRE"
         },
         {
+            "name": "Brittany",
+            "code": "E"
+        },
+        {
             "name": "Calvados",
             "code": "14"
         },
@@ -5487,6 +5499,10 @@
             "code": "18"
         },
         {
+            "name": "Clipperton Island",
+            "code": "CP"
+        },
+        {
             "name": "Corrèze",
             "code": "19"
         },
@@ -5497,6 +5513,10 @@
         {
             "name": "Córsega do Sul",
             "code": "2A"
+        },
+        {
+            "name": "Corsica",
+            "code": "H"
         },
         {
             "name": "Côte-d’Or",
@@ -5543,6 +5563,18 @@
             "code": "29"
         },
         {
+            "name": "French Guiana",
+            "code": "GF"
+        },
+        {
+            "name": "French Polynesia",
+            "code": "PF"
+        },
+        {
+            "name": "French Southern Territories",
+            "code": "TF"
+        },
+        {
             "name": "Gard",
             "code": "30"
         },
@@ -5557,6 +5589,10 @@
         {
             "name": "Guadeloupe",
             "code": "GUA"
+        },
+        {
+            "name": "Guadeloupe²",
+            "code": "GP"
         },
         {
             "name": "Haute-Loire",
@@ -5651,12 +5687,20 @@
             "code": "51"
         },
         {
+            "name": "Martinique",
+            "code": "MQ"
+        },
+        {
             "name": "Mayenne",
             "code": "53"
         },
         {
             "name": "Mayotte",
             "code": "MAY"
+        },
+        {
+            "name": "Mayotte²",
+            "code": "YT"
         },
         {
             "name": "Meurthe-et-Moselle",
@@ -5673,6 +5717,10 @@
         {
             "name": "Mosela",
             "code": "57"
+        },
+        {
+            "name": "New Caledonia",
+            "code": "NC"
         },
         {
             "name": "Nièvre",
@@ -5735,6 +5783,10 @@
             "code": "63"
         },
         {
+            "name": "Réunion",
+            "code": "RE"
+        },
+        {
             "name": "Ródano",
             "code": "69"
         },
@@ -5765,6 +5817,18 @@
         {
             "name": "Somme",
             "code": "80"
+        },
+        {
+            "name": "St. Barthélemy",
+            "code": "BL"
+        },
+        {
+            "name": "St. Martin",
+            "code": "MF"
+        },
+        {
+            "name": "St. Pierre & Miquelon",
+            "code": "PM"
         },
         {
             "name": "Tarn",
@@ -5805,6 +5869,10 @@
         {
             "name": "Vosges",
             "code": "88"
+        },
+        {
+            "name": "Wallis & Futuna",
+            "code": "WF"
         },
         {
             "name": "Yonne",
@@ -5895,7 +5963,7 @@
             "code": "ARM"
         },
         {
-            "name": "Armagh",
+            "name": "Armagh, Banbridge and Craigavon",
             "code": "ABC"
         },
         {
@@ -5979,7 +6047,7 @@
             "code": "BEN"
         },
         {
-            "name": "Bridgend County Borough",
+            "name": "Bridgend",
             "code": "BGE"
         },
         {
@@ -6427,7 +6495,7 @@
             "code": "MDW"
         },
         {
-            "name": "Merthyr Tydfil County Borough",
+            "name": "Merthyr Tydfil",
             "code": "MTY"
         },
         {
@@ -6439,7 +6507,7 @@
             "code": "MEA"
         },
         {
-            "name": "Mid-Ulster",
+            "name": "Mid Ulster",
             "code": "MUL"
         },
         {
@@ -6483,12 +6551,12 @@
             "code": "NWP"
         },
         {
-            "name": "Newry",
-            "code": "NMD"
-        },
-        {
             "name": "Newry and Mourne",
             "code": "NYM"
+        },
+        {
+            "name": "Newry, Mourne and Down",
+            "code": "NMD"
         },
         {
             "name": "Newtownabbey",
@@ -6847,7 +6915,7 @@
             "code": "WOR"
         },
         {
-            "name": "Wrexham County Borough",
+            "name": "Wrexham",
             "code": "WRX"
         }
     ],
@@ -7027,7 +7095,7 @@
             "code": "B"
         },
         {
-            "name": "Boké²",
+            "name": "Boké",
             "code": "BK"
         },
         {
@@ -7116,11 +7184,11 @@
         },
         {
             "name": "Mamou",
-            "code": "M"
+            "code": "MM"
         },
         {
-            "name": "Mamou²",
-            "code": "MM"
+            "name": "Mamou",
+            "code": "M"
         },
         {
             "name": "Nzérékoré",
@@ -9669,7 +9737,7 @@
             "code": "27"
         },
         {
-            "name": "Condado de Mombaça",
+            "name": "Mombasa",
             "code": "28"
         },
         {
@@ -10029,7 +10097,7 @@
             "code": "13"
         },
         {
-            "name": "Nampo",
+            "name": "Nampho",
             "code": "14"
         }
     ],
@@ -10469,7 +10537,7 @@
             "code": "33"
         },
         {
-            "name": "Distrito de Jaffna",
+            "name": "Jaffna",
             "code": "41"
         },
         {
@@ -10933,6 +11001,10 @@
             "code": "DI"
         },
         {
+            "name": "Diekirch²",
+            "code": "D"
+        },
+        {
             "name": "Echternach",
             "code": "EC"
         },
@@ -10943,6 +11015,14 @@
         {
             "name": "Grevenmacher",
             "code": "GR"
+        },
+        {
+            "name": "Grevenmacher²",
+            "code": "G"
+        },
+        {
+            "name": "Luxembourg²",
+            "code": "L"
         },
         {
             "name": "Luxemburgo",
@@ -11505,7 +11585,7 @@
             "code": "GT"
         },
         {
-            "name": "Jabal Algarbi",
+            "name": "Jabal al Gharbi",
             "code": "JG"
         },
         {
@@ -11529,7 +11609,7 @@
             "code": "SR"
         },
         {
-            "name": "Trípoli",
+            "name": "Tripoli",
             "code": "TB"
         },
         {
@@ -12843,6 +12923,30 @@
     ],
     "MR": [
         {
+            "name": "Adrar",
+            "code": "07"
+        },
+        {
+            "name": "Assaba",
+            "code": "03"
+        },
+        {
+            "name": "Brakna",
+            "code": "05"
+        },
+        {
+            "name": "Dakhlet Nouadhibou",
+            "code": "08"
+        },
+        {
+            "name": "Gorgol",
+            "code": "04"
+        },
+        {
+            "name": "Guidimaka",
+            "code": "10"
+        },
+        {
             "name": "Hodh ech Chargui",
             "code": "01"
         },
@@ -12851,56 +12955,36 @@
             "code": "02"
         },
         {
-            "name": "Assaba",
-            "code": "03"
-        },
-        {
-            "name": "Gorgol",
-            "code": "04"
-        },
-        {
-            "name": "Brakna",
-            "code": "05"
-        },
-        {
-            "name": "Trarza",
-            "code": "06"
-        },
-        {
-            "name": "Adrar",
-            "code": "07"
-        },
-        {
-            "name": "Dakhlet Nouadhibou",
-            "code": "08"
-        },
-        {
-            "name": "Tagant",
-            "code": "09"
-        },
-        {
-            "name": "Guidimaka",
-            "code": "10"
-        },
-        {
-            "name": "Tiris Zemmour",
-            "code": "11"
-        },
-        {
             "name": "Inchiri",
             "code": "12"
         },
         {
-            "name": "Nouakchott Ouest",
-            "code": "13"
+            "name": "Nouakchott",
+            "code": "NKC"
         },
         {
             "name": "Nouakchott Nord",
             "code": "14"
         },
         {
+            "name": "Nouakchott Ouest",
+            "code": "13"
+        },
+        {
             "name": "Nouakchott Sud",
             "code": "15"
+        },
+        {
+            "name": "Tagant",
+            "code": "09"
+        },
+        {
+            "name": "Tiris Zemmour",
+            "code": "11"
+        },
+        {
+            "name": "Trarza",
+            "code": "06"
         }
     ],
     "MT": [
@@ -14047,12 +14131,20 @@
     ],
     "NL": [
         {
+            "name": "Aruba",
+            "code": "AW"
+        },
+        {
             "name": "Bonaire",
             "code": "BQ1"
         },
         {
             "name": "Brabante do Norte",
             "code": "NB"
+        },
+        {
+            "name": "Curaçao",
+            "code": "CW"
         },
         {
             "name": "Drente",
@@ -14097,6 +14189,10 @@
         {
             "name": "Santo Eustáquio",
             "code": "BQ3"
+        },
+        {
+            "name": "Sint Maarten",
+            "code": "SX"
         },
         {
             "name": "Utrecht",
@@ -14363,6 +14459,10 @@
             "code": "NSN"
         },
         {
+            "name": "North Island",
+            "code": "N"
+        },
+        {
             "name": "Northland",
             "code": "NTL"
         },
@@ -14377,6 +14477,10 @@
         {
             "name": "Região de Marborough",
             "code": "MBH"
+        },
+        {
+            "name": "South Island",
+            "code": "S"
         },
         {
             "name": "Southland",
@@ -14409,12 +14513,20 @@
             "code": "ZA"
         },
         {
+            "name": "Al Batinah",
+            "code": "BA"
+        },
+        {
             "name": "Al Buraimi",
             "code": "BU"
         },
         {
             "name": "Al Wusta",
             "code": "WU"
+        },
+        {
+            "name": "Ash Sharqiyah",
+            "code": "SH"
         },
         {
             "name": "Ash Sharqiyah Sul",
@@ -16555,6 +16667,10 @@
         {
             "name": "Santa Helena",
             "code": "HL"
+        },
+        {
+            "name": "Tristan da Cunha",
+            "code": "TA"
         }
     ],
     "SI": [
@@ -19807,6 +19923,10 @@
             "code": "AK"
         },
         {
+            "name": "American Samoa",
+            "code": "AS"
+        },
+        {
             "name": "Arizona",
             "code": "AZ"
         },
@@ -19853,6 +19973,10 @@
         {
             "name": "Geórgia",
             "code": "GA"
+        },
+        {
+            "name": "Guam",
+            "code": "GU"
         },
         {
             "name": "Havaí",
@@ -19927,6 +20051,10 @@
             "code": "NV"
         },
         {
+            "name": "Northern Mariana Islands",
+            "code": "MP"
+        },
+        {
             "name": "Nova Hampshire",
             "code": "NH"
         },
@@ -19959,6 +20087,10 @@
             "code": "PA"
         },
         {
+            "name": "Puerto Rico",
+            "code": "PR"
+        },
+        {
             "name": "Rhode Island",
             "code": "RI"
         },
@@ -19969,6 +20101,14 @@
         {
             "name": "Texas",
             "code": "TX"
+        },
+        {
+            "name": "U.S. Outlying Islands",
+            "code": "UM"
+        },
+        {
+            "name": "U.S. Virgin Islands",
+            "code": "VI"
         },
         {
             "name": "Utah",
