--- a/js/data/locale/regionnames.json
+++ b/js/data/locale/regionnames.json
@@ -3119,140 +3119,140 @@
     ],
     "CN": [
         {
-            "code": "AH",
-            "name": "Anhui"
-        },
-        {
-            "code": "BJ",
+            "code": "11",
             "name": "Beijing"
         },
         {
-            "code": "CQ",
-            "name": "Chongqing"
-        },
-        {
-            "code": "FJ",
-            "name": "Fujian"
-        },
-        {
-            "code": "GS",
-            "name": "Gansu"
-        },
-        {
-            "code": "GD",
-            "name": "Guangdong"
-        },
-        {
-            "code": "GX",
-            "name": "Guangxi"
-        },
-        {
-            "code": "GZ",
-            "name": "Guizhou"
-        },
-        {
-            "code": "HI",
-            "name": "Hainan"
-        },
-        {
-            "code": "HE",
-            "name": "Hebei"
-        },
-        {
-            "code": "HL",
-            "name": "Heilongjiang"
-        },
-        {
-            "code": "HA",
-            "name": "Henan"
-        },
-        {
-            "code": "HK",
-            "name": "Hong Kong"
-        },
-        {
-            "code": "HB",
-            "name": "Hubei"
-        },
-        {
-            "code": "HN",
-            "name": "Hunan"
-        },
-        {
-            "code": "NM",
-            "name": "Inner Mongolia"
-        },
-        {
-            "code": "JS",
-            "name": "Jiangsu"
-        },
-        {
-            "code": "JX",
-            "name": "Jiangxi"
-        },
-        {
-            "code": "JL",
-            "name": "Jilin"
-        },
-        {
-            "code": "LN",
-            "name": "Liaoning"
-        },
-        {
-            "code": "MO",
-            "name": "Macau"
-        },
-        {
-            "code": "NX",
-            "name": "Ningxia"
-        },
-        {
-            "code": "QH",
-            "name": "Qinghai"
-        },
-        {
-            "code": "SN",
-            "name": "Shaanxi"
-        },
-        {
-            "code": "SD",
-            "name": "Shandong"
-        },
-        {
-            "code": "SH",
-            "name": "Shanghai"
-        },
-        {
-            "code": "SX",
-            "name": "Shanxi"
-        },
-        {
-            "code": "SC",
-            "name": "Sichuan"
-        },
-        {
-            "code": "TW",
-            "name": "Taiwan"
-        },
-        {
-            "code": "TJ",
+            "code": "12",
             "name": "Tianjin"
         },
         {
-            "code": "XZ",
-            "name": "Tibet"
+            "code": "13",
+            "name": "Hebei"
         },
         {
-            "code": "XJ",
-            "name": "Xinjiang"
+            "code": "14",
+            "name": "Shanxi"
         },
         {
-            "code": "YN",
+            "code": "15",
+            "name": "Inner Mongolia"
+        },
+        {
+            "code": "21",
+            "name": "Liaoning"
+        },
+        {
+            "code": "22",
+            "name": "Jilin"
+        },
+        {
+            "code": "23",
+            "name": "Heilongjiang"
+        },
+        {
+            "code": "31",
+            "name": "Shanghai"
+        },
+        {
+            "code": "32",
+            "name": "Jiangsu"
+        },
+        {
+            "code": "33",
+            "name": "Zhejiang"
+        },
+        {
+            "code": "34",
+            "name": "Anhui"
+        },
+        {
+            "code": "35",
+            "name": "Fujian"
+        },
+        {
+            "code": "36",
+            "name": "Jiangxi"
+        },
+        {
+            "code": "37",
+            "name": "Shandong"
+        },
+        {
+            "code": "41",
+            "name": "Henan"
+        },
+        {
+            "code": "42",
+            "name": "Hubei"
+        },
+        {
+            "code": "43",
+            "name": "Hunan"
+        },
+        {
+            "code": "44",
+            "name": "Guangdong"
+        },
+        {
+            "code": "45",
+            "name": "Guangxi"
+        },
+        {
+            "code": "46",
+            "name": "Hainan"
+        },
+        {
+            "code": "50",
+            "name": "Chongqing"
+        },
+        {
+            "code": "51",
+            "name": "Sichuan"
+        },
+        {
+            "code": "52",
+            "name": "Guizhou"
+        },
+        {
+            "code": "53",
             "name": "Yunnan"
         },
         {
-            "code": "ZJ",
-            "name": "Zhejiang"
+            "code": "54",
+            "name": "Tibet"
+        },
+        {
+            "code": "61",
+            "name": "Shaanxi"
+        },
+        {
+            "code": "62",
+            "name": "Gansu"
+        },
+        {
+            "code": "63",
+            "name": "Qinghai"
+        },
+        {
+            "code": "64",
+            "name": "Ningxia"
+        },
+        {
+            "code": "65",
+            "name": "Xinjiang"
+        },
+        {
+            "code": "71",
+            "name": "Taiwan"
+        },
+        {
+            "code": "91",
+            "name": "Hong Kong SAR China"
+        },
+        {
+            "code": "92",
+            "name": "Macau SAR China"
         }
     ],
     "CO": [
@@ -4953,6 +4953,10 @@
             "name": "Cádiz"
         },
         {
+            "code": "CN",
+            "name": "Canary Islands"
+        },
+        {
             "code": "CB",
             "name": "Cantabria"
         },
@@ -5197,6 +5201,10 @@
     ],
     "FI": [
         {
+            "code": "01",
+            "name": "Åland Islands"
+        },
+        {
             "code": "02",
             "name": "South Karelia"
         },
@@ -5427,6 +5435,10 @@
             "name": "Brittany"
         },
         {
+            "code": "E",
+            "name": "Brittany"
+        },
+        {
             "code": "BFC",
             "name": "Burgundy-Franche-Comté"
         },
@@ -5455,6 +5467,10 @@
             "name": "Cher"
         },
         {
+            "code": "CP",
+            "name": "Clipperton Island"
+        },
+        {
             "code": "19",
             "name": "Corrèze"
         },
@@ -5464,6 +5480,10 @@
         },
         {
             "code": "COR",
+            "name": "Corsica"
+        },
+        {
+            "code": "H",
             "name": "Corsica"
         },
         {
@@ -5511,6 +5531,18 @@
             "name": "Finistère"
         },
         {
+            "code": "GF",
+            "name": "French Guiana"
+        },
+        {
+            "code": "PF",
+            "name": "French Polynesia"
+        },
+        {
+            "code": "TF",
+            "name": "French Southern Territories"
+        },
+        {
             "code": "30",
             "name": "Gard"
         },
@@ -5529,6 +5561,10 @@
         {
             "code": "GUA",
             "name": "Guadeloupe"
+        },
+        {
+            "code": "GP",
+            "name": "Guadeloupe²"
         },
         {
             "code": "68",
@@ -5655,12 +5691,20 @@
             "name": "Marne"
         },
         {
+            "code": "MQ",
+            "name": "Martinique"
+        },
+        {
             "code": "53",
             "name": "Mayenne"
         },
         {
             "code": "MAY",
             "name": "Mayotte"
+        },
+        {
+            "code": "YT",
+            "name": "Mayotte²"
         },
         {
             "code": "54",
@@ -5677,6 +5721,10 @@
         {
             "code": "57",
             "name": "Moselle"
+        },
+        {
+            "code": "NC",
+            "name": "New Caledonia"
         },
         {
             "code": "58",
@@ -5735,6 +5783,10 @@
             "name": "Pyrénées-Orientales"
         },
         {
+            "code": "RE",
+            "name": "Réunion"
+        },
+        {
             "code": "69",
             "name": "Rhône"
         },
@@ -5765,6 +5817,18 @@
         {
             "code": "80",
             "name": "Somme"
+        },
+        {
+            "code": "BL",
+            "name": "St. Barthélemy"
+        },
+        {
+            "code": "MF",
+            "name": "St. Martin"
+        },
+        {
+            "code": "PM",
+            "name": "St. Pierre & Miquelon"
         },
         {
             "code": "81",
@@ -5805,6 +5869,10 @@
         {
             "code": "88",
             "name": "Vosges"
+        },
+        {
+            "code": "WF",
+            "name": "Wallis & Futuna"
         },
         {
             "code": "89",
@@ -10933,6 +11001,10 @@
             "name": "Diekirch"
         },
         {
+            "code": "D",
+            "name": "Diekirch²"
+        },
+        {
             "code": "EC",
             "name": "Echternach"
         },
@@ -10945,8 +11017,16 @@
             "name": "Grevenmacher"
         },
         {
+            "code": "G",
+            "name": "Grevenmacher²"
+        },
+        {
             "code": "LU",
             "name": "Luxembourg"
+        },
+        {
+            "code": "L",
+            "name": "Luxembourg²"
         },
         {
             "code": "ME",
@@ -12843,6 +12923,30 @@
     ],
     "MR": [
         {
+            "code": "07",
+            "name": "Adrar"
+        },
+        {
+            "code": "03",
+            "name": "Assaba"
+        },
+        {
+            "code": "05",
+            "name": "Brakna"
+        },
+        {
+            "code": "08",
+            "name": "Dakhlet Nouadhibou"
+        },
+        {
+            "code": "04",
+            "name": "Gorgol"
+        },
+        {
+            "code": "10",
+            "name": "Guidimaka"
+        },
+        {
             "code": "01",
             "name": "Hodh Ech Chargui"
         },
@@ -12851,56 +12955,36 @@
             "name": "Hodh El Gharbi"
         },
         {
-            "code": "03",
-            "name": "Assaba"
-        },
-        {
-            "code": "04",
-            "name": "Gorgol"
-        },
-        {
-            "code": "05",
-            "name": "Brakna"
-        },
-        {
-            "code": "06",
-            "name": "Trarza"
-        },
-        {
-            "code": "07",
-            "name": "Adrar"
-        },
-        {
-            "code": "08",
-            "name": "Dakhlet Nouadhibou"
-        },
-        {
-            "code": "09",
-            "name": "Tagant"
-        },
-        {
-            "code": "10",
-            "name": "Guidimaka"
-        },
-        {
-            "code": "11",
-            "name": "Tiris Zemmour"
-        },
-        {
             "code": "12",
             "name": "Inchiri"
         },
         {
-            "code": "13",
-            "name": "Nouakchott Ouest"
+            "code": "NKC",
+            "name": "Nouakchott"
         },
         {
             "code": "14",
             "name": "Nouakchott Nord"
         },
         {
+            "code": "13",
+            "name": "Nouakchott Ouest"
+        },
+        {
             "code": "15",
             "name": "Nouakchott Sud"
+        },
+        {
+            "code": "09",
+            "name": "Tagant"
+        },
+        {
+            "code": "11",
+            "name": "Tiris Zemmour"
+        },
+        {
+            "code": "06",
+            "name": "Trarza"
         }
     ],
     "MT": [
@@ -14047,8 +14131,16 @@
     ],
     "NL": [
         {
+            "code": "AW",
+            "name": "Aruba"
+        },
+        {
             "code": "BQ1",
             "name": "Bonaire"
+        },
+        {
+            "code": "CW",
+            "name": "Curaçao"
         },
         {
             "code": "DR",
@@ -14093,6 +14185,10 @@
         {
             "code": "BQ3",
             "name": "Sint Eustatius"
+        },
+        {
+            "code": "SX",
+            "name": "Sint Maarten"
         },
         {
             "code": "ZH",
@@ -14367,12 +14463,20 @@
             "name": "Nelson"
         },
         {
+            "code": "N",
+            "name": "North Island"
+        },
+        {
             "code": "NTL",
             "name": "Northland"
         },
         {
             "code": "OTA",
             "name": "Otago"
+        },
+        {
+            "code": "S",
+            "name": "South Island"
         },
         {
             "code": "STL",
@@ -14409,12 +14513,20 @@
             "name": "Ad Dhahirah"
         },
         {
+            "code": "BA",
+            "name": "Al Batinah"
+        },
+        {
             "code": "BU",
             "name": "Al Buraimi"
         },
         {
             "code": "WU",
             "name": "Al Wusta"
+        },
+        {
+            "code": "SH",
+            "name": "Ash Sharqiyah"
         },
         {
             "code": "ZU",
@@ -15125,16 +15237,16 @@
     ],
     "PL": [
         {
+            "code": "PM",
+            "name": "Federal Capital Territory"
+        },
+        {
             "code": "WP",
             "name": "Greater Poland"
         },
         {
-            "code": "SK",
-            "name": "Holy Cross"
-        },
-        {
             "code": "KP",
-            "name": "Kuyavia-Pomerania"
+            "name": "Kuyavian-Pomerania"
         },
         {
             "code": "MA",
@@ -15146,7 +15258,7 @@
         },
         {
             "code": "DS",
-            "name": "Lower Silesia"
+            "name": "Lower Silesian"
         },
         {
             "code": "LU",
@@ -15166,11 +15278,7 @@
         },
         {
             "code": "PD",
-            "name": "Podlachia"
-        },
-        {
-            "code": "PM",
-            "name": "Pomerania"
+            "name": "Podlaskie"
         },
         {
             "code": "SL",
@@ -15181,8 +15289,12 @@
             "name": "Subcarpathia"
         },
         {
+            "code": "SK",
+            "name": "Świętokrzyskie"
+        },
+        {
             "code": "WN",
-            "name": "Warmia-Masuria"
+            "name": "Warmian-Masuria"
         },
         {
             "code": "ZP",
@@ -16555,6 +16667,10 @@
         {
             "code": "HL",
             "name": "Saint Helena"
+        },
+        {
+            "code": "TA",
+            "name": "Tristan da Cunha"
         }
     ],
     "SI": [
@@ -19807,6 +19923,10 @@
             "name": "Alaska"
         },
         {
+            "code": "AS",
+            "name": "American Samoa"
+        },
+        {
             "code": "AZ",
             "name": "Arizona"
         },
@@ -19837,6 +19957,10 @@
         {
             "code": "GA",
             "name": "Georgia"
+        },
+        {
+            "code": "GU",
+            "name": "Guam"
         },
         {
             "code": "HI",
@@ -19935,6 +20059,10 @@
             "name": "North Dakota"
         },
         {
+            "code": "MP",
+            "name": "Northern Mariana Islands"
+        },
+        {
             "code": "OH",
             "name": "Ohio"
         },
@@ -19949,6 +20077,10 @@
         {
             "code": "PA",
             "name": "Pennsylvania"
+        },
+        {
+            "code": "PR",
+            "name": "Puerto Rico"
         },
         {
             "code": "RI",
@@ -19969,6 +20101,14 @@
         {
             "code": "TX",
             "name": "Texas"
+        },
+        {
+            "code": "UM",
+            "name": "U.S. Outlying Islands"
+        },
+        {
+            "code": "VI",
+            "name": "U.S. Virgin Islands"
         },
         {
             "code": "UT",
