--- a/js/data/locale/de/regionnames.json
+++ b/js/data/locale/de/regionnames.json
@@ -2894,11 +2894,11 @@
         },
         {
             "name": "Bas-Sassandra",
-            "code": "BS"
+            "code": "09"
         },
         {
             "name": "Bas-Sassandra",
-            "code": "09"
+            "code": "BS"
         },
         {
             "name": "Comoé",
@@ -2965,10 +2965,6 @@
             "code": "11"
         },
         {
-            "name": "Region Zanzan",
-            "code": "ZZ"
-        },
-        {
             "name": "Sassandra-Marahoué",
             "code": "SM"
         },
@@ -2990,11 +2986,11 @@
         },
         {
             "name": "Vallée du Bandama",
-            "code": "VB"
+            "code": "04"
         },
         {
             "name": "Vallée du Bandama",
-            "code": "04"
+            "code": "VB"
         },
         {
             "name": "Woroba",
@@ -3011,6 +3007,10 @@
         {
             "name": "Zanzan",
             "code": "08"
+        },
+        {
+            "name": "Zanzan²",
+            "code": "ZZ"
         }
     ],
     "CL": [
@@ -3119,140 +3119,140 @@
     ],
     "CN": [
         {
-            "name": "Anhui",
-            "code": "AH"
-        },
-        {
-            "name": "Autonomes Gebiet Tibet",
-            "code": "XZ"
-        },
-        {
-            "name": "Chongqing",
-            "code": "CQ"
-        },
-        {
-            "name": "Fujian",
-            "code": "FJ"
-        },
-        {
-            "name": "Gansu",
-            "code": "GS"
-        },
-        {
-            "name": "Guangdong",
-            "code": "GD"
-        },
-        {
-            "name": "Guangxi",
-            "code": "GX"
-        },
-        {
-            "name": "Guizhou",
-            "code": "GZ"
-        },
-        {
-            "name": "Hainan",
-            "code": "HI"
-        },
-        {
-            "name": "Hebei",
-            "code": "HE"
-        },
-        {
-            "name": "Heilongjiang",
-            "code": "HL"
-        },
-        {
-            "name": "Henan",
-            "code": "HA"
-        },
-        {
-            "name": "Hongkong",
-            "code": "HK"
-        },
-        {
-            "name": "Hubei",
-            "code": "HB"
-        },
-        {
-            "name": "Hunan",
-            "code": "HN"
-        },
-        {
-            "name": "Innere Mongolei",
-            "code": "NM"
-        },
-        {
-            "name": "Jiangsu",
-            "code": "JS"
-        },
-        {
-            "name": "Jiangxi",
-            "code": "JX"
-        },
-        {
-            "name": "Jilin",
-            "code": "JL"
-        },
-        {
-            "name": "Liaoning",
-            "code": "LN"
-        },
-        {
-            "name": "Macau",
-            "code": "MO"
-        },
-        {
-            "name": "Ningxia",
-            "code": "NX"
-        },
-        {
             "name": "Peking",
-            "code": "BJ"
-        },
-        {
-            "name": "Provinz Taiwan",
-            "code": "TW"
-        },
-        {
-            "name": "Qinghai",
-            "code": "QH"
-        },
-        {
-            "name": "Shaanxi",
-            "code": "SN"
-        },
-        {
-            "name": "Shandong",
-            "code": "SD"
-        },
-        {
-            "name": "Shanghai",
-            "code": "SH"
-        },
-        {
-            "name": "Shanxi",
-            "code": "SX"
-        },
-        {
-            "name": "Sichuan",
-            "code": "SC"
+            "code": "11"
         },
         {
             "name": "Tianjin",
-            "code": "TJ"
+            "code": "12"
         },
         {
-            "name": "Xinjiang",
-            "code": "XJ"
+            "name": "Hebei",
+            "code": "13"
         },
         {
-            "name": "Yunnan",
-            "code": "YN"
+            "name": "Shanxi",
+            "code": "14"
+        },
+        {
+            "name": "Innere Mongolei",
+            "code": "15"
+        },
+        {
+            "name": "Liaoning",
+            "code": "21"
+        },
+        {
+            "name": "Jilin",
+            "code": "22"
+        },
+        {
+            "name": "Heilongjiang",
+            "code": "23"
+        },
+        {
+            "name": "Shanghai",
+            "code": "31"
+        },
+        {
+            "name": "Jiangsu",
+            "code": "32"
         },
         {
             "name": "Zhejiang",
-            "code": "ZJ"
+            "code": "33"
+        },
+        {
+            "name": "Anhui",
+            "code": "34"
+        },
+        {
+            "name": "Fujian",
+            "code": "35"
+        },
+        {
+            "name": "Jiangxi",
+            "code": "36"
+        },
+        {
+            "name": "Shandong",
+            "code": "37"
+        },
+        {
+            "name": "Henan",
+            "code": "41"
+        },
+        {
+            "name": "Hubei",
+            "code": "42"
+        },
+        {
+            "name": "Hunan",
+            "code": "43"
+        },
+        {
+            "name": "Guangdong",
+            "code": "44"
+        },
+        {
+            "name": "Guangxi",
+            "code": "45"
+        },
+        {
+            "name": "Hainan",
+            "code": "46"
+        },
+        {
+            "name": "Chongqing",
+            "code": "50"
+        },
+        {
+            "name": "Sichuan",
+            "code": "51"
+        },
+        {
+            "name": "Guizhou",
+            "code": "52"
+        },
+        {
+            "name": "Yunnan",
+            "code": "53"
+        },
+        {
+            "name": "Autonomes Gebiet Tibet",
+            "code": "54"
+        },
+        {
+            "name": "Shaanxi",
+            "code": "61"
+        },
+        {
+            "name": "Gansu",
+            "code": "62"
+        },
+        {
+            "name": "Qinghai",
+            "code": "63"
+        },
+        {
+            "name": "Ningxia",
+            "code": "64"
+        },
+        {
+            "name": "Xinjiang",
+            "code": "65"
+        },
+        {
+            "name": "Taiwan",
+            "code": "71"
+        },
+        {
+            "name": "Hong Kong SAR China",
+            "code": "91"
+        },
+        {
+            "name": "Macau SAR China",
+            "code": "92"
         }
     ],
     "CO": [
@@ -4909,10 +4909,6 @@
             "code": "CB"
         },
         {
-            "name": "Autonome Gemeinschaft Kantabrien²",
-            "code": "S"
-        },
-        {
             "name": "Autonome Gemeinschaft Kastilien und León",
             "code": "CL"
         },
@@ -4933,10 +4929,6 @@
             "code": "NC"
         },
         {
-            "name": "Autonome Gemeinschaft Navarra²",
-            "code": "NA"
-        },
-        {
             "name": "Autonome Gemeinschaft Region Murcia",
             "code": "MC"
         },
@@ -4945,12 +4937,20 @@
             "code": "IB"
         },
         {
-            "name": "Balearische Inseln²",
+            "name": "Balears Province",
             "code": "PM"
         },
         {
             "name": "Bizkaia",
             "code": "BI"
+        },
+        {
+            "name": "Canary Islands",
+            "code": "CN"
+        },
+        {
+            "name": "Cantabria Province",
+            "code": "S"
         },
         {
             "name": "Ceuta",
@@ -4995,6 +4995,10 @@
         {
             "name": "Murcia",
             "code": "MU"
+        },
+        {
+            "name": "Navarra",
+            "code": "NA"
         },
         {
             "name": "Provinz A Coruña",
@@ -5197,6 +5201,10 @@
     ],
     "FI": [
         {
+            "name": "Åland Islands",
+            "code": "01"
+        },
+        {
             "name": "Südkarelien",
             "code": "02"
         },
@@ -5391,8 +5399,20 @@
             "code": "BRE"
         },
         {
+            "name": "Brittany",
+            "code": "E"
+        },
+        {
             "name": "Centre-Val de Loire",
             "code": "CVL"
+        },
+        {
+            "name": "Clipperton Island",
+            "code": "CP"
+        },
+        {
+            "name": "Corsica",
+            "code": "H"
         },
         {
             "name": "Département Ain",
@@ -5751,6 +5771,18 @@
             "code": "78"
         },
         {
+            "name": "French Guiana",
+            "code": "GF"
+        },
+        {
+            "name": "French Polynesia",
+            "code": "PF"
+        },
+        {
+            "name": "French Southern Territories",
+            "code": "TF"
+        },
+        {
             "name": "Gard",
             "code": "30"
         },
@@ -5761,6 +5793,10 @@
         {
             "name": "Guadeloupe",
             "code": "GUA"
+        },
+        {
+            "name": "Guadeloupe²",
+            "code": "GP"
         },
         {
             "name": "Hauts-de-France",
@@ -5779,12 +5815,24 @@
             "code": "LRE"
         },
         {
+            "name": "Martinique",
+            "code": "MQ"
+        },
+        {
             "name": "Mayenne",
             "code": "53"
         },
         {
             "name": "Mayotte",
             "code": "MAY"
+        },
+        {
+            "name": "Mayotte²",
+            "code": "YT"
+        },
+        {
+            "name": "New Caledonia",
+            "code": "NC"
         },
         {
             "name": "Normandie",
@@ -5811,8 +5859,28 @@
             "code": "PAC"
         },
         {
+            "name": "Réunion",
+            "code": "RE"
+        },
+        {
+            "name": "St. Barthélemy",
+            "code": "BL"
+        },
+        {
+            "name": "St. Martin",
+            "code": "MF"
+        },
+        {
+            "name": "St. Pierre & Miquelon",
+            "code": "PM"
+        },
+        {
             "name": "Territoire de Belfort",
             "code": "90"
+        },
+        {
+            "name": "Wallis & Futuna",
+            "code": "WF"
         }
     ],
     "GA": [
@@ -6843,7 +6911,7 @@
             "code": "WOR"
         },
         {
-            "name": "Wrexham County Borough",
+            "name": "Wrexham",
             "code": "WRX"
         },
         {
@@ -7279,6 +7347,10 @@
             "code": "15"
         },
         {
+            "name": "Crete",
+            "code": "M"
+        },
+        {
             "name": "Cyclades",
             "code": "82"
         },
@@ -7357,10 +7429,6 @@
         {
             "name": "Kozani",
             "code": "58"
-        },
-        {
-            "name": "Kreta",
-            "code": "M"
         },
         {
             "name": "Laconia",
@@ -7591,16 +7659,12 @@
             "code": "GA"
         },
         {
-            "name": "Provinz Leste",
+            "name": "Leste",
             "code": "L"
         },
         {
-            "name": "Provinz Norte",
+            "name": "Norte",
             "code": "N"
-        },
-        {
-            "name": "Provinz Sul",
-            "code": "S"
         },
         {
             "name": "Region Bafatá",
@@ -7621,6 +7685,10 @@
         {
             "name": "Region Tombali",
             "code": "TO"
+        },
+        {
+            "name": "Sul",
+            "code": "S"
         }
     ],
     "GY": [
@@ -10029,7 +10097,7 @@
             "code": "13"
         },
         {
-            "name": "Namp’o",
+            "name": "Nampho",
             "code": "14"
         }
     ],
@@ -10933,6 +11001,10 @@
             "code": "DI"
         },
         {
+            "name": "Diekirch²",
+            "code": "D"
+        },
+        {
             "name": "Echternach",
             "code": "EC"
         },
@@ -10942,11 +11014,19 @@
         },
         {
             "name": "Grevenmacher",
+            "code": "G"
+        },
+        {
+            "name": "Grevenmacher²",
             "code": "GR"
         },
         {
             "name": "Luxemburg",
             "code": "LU"
+        },
+        {
+            "name": "Luxemburg²",
+            "code": "L"
         },
         {
             "name": "Mersch",
@@ -12843,6 +12923,30 @@
     ],
     "MR": [
         {
+            "name": "Adrar",
+            "code": "07"
+        },
+        {
+            "name": "Assaba",
+            "code": "03"
+        },
+        {
+            "name": "Brakna",
+            "code": "05"
+        },
+        {
+            "name": "Dakhlet Nouadhibou",
+            "code": "08"
+        },
+        {
+            "name": "Gorgol",
+            "code": "04"
+        },
+        {
+            "name": "Guidimaka",
+            "code": "10"
+        },
+        {
             "name": "Hodh Ech Chargui",
             "code": "01"
         },
@@ -12851,56 +12955,36 @@
             "code": "02"
         },
         {
-            "name": "Assaba",
-            "code": "03"
-        },
-        {
-            "name": "Gorgol",
-            "code": "04"
-        },
-        {
-            "name": "Brakna",
-            "code": "05"
-        },
-        {
-            "name": "Trarza",
-            "code": "06"
-        },
-        {
-            "name": "Adrar",
-            "code": "07"
-        },
-        {
-            "name": "Dakhlet Nouadhibou",
-            "code": "08"
-        },
-        {
-            "name": "Tagant",
-            "code": "09"
-        },
-        {
-            "name": "Guidimaka",
-            "code": "10"
-        },
-        {
-            "name": "Tiris Zemmour",
-            "code": "11"
-        },
-        {
             "name": "Inchiri",
             "code": "12"
         },
         {
-            "name": "Nouakchott Ouest",
-            "code": "13"
+            "name": "Nouakchott",
+            "code": "NKC"
         },
         {
             "name": "Nouakchott Nord",
             "code": "14"
         },
         {
+            "name": "Nouakchott Ouest",
+            "code": "13"
+        },
+        {
             "name": "Nouakchott Sud",
             "code": "15"
+        },
+        {
+            "name": "Tagant",
+            "code": "09"
+        },
+        {
+            "name": "Tiris Zemmour",
+            "code": "11"
+        },
+        {
+            "name": "Trarza",
+            "code": "06"
         }
     ],
     "MT": [
@@ -14047,8 +14131,16 @@
     ],
     "NL": [
         {
+            "name": "Aruba",
+            "code": "AW"
+        },
+        {
             "name": "Bonaire",
             "code": "BQ1"
+        },
+        {
+            "name": "Curaçao",
+            "code": "CW"
         },
         {
             "name": "Provinz Drente",
@@ -14101,6 +14193,10 @@
         {
             "name": "Sint Eustatius",
             "code": "BQ3"
+        },
+        {
+            "name": "Sint Maarten",
+            "code": "SX"
         },
         {
             "name": "Zeeland",
@@ -14363,6 +14459,10 @@
             "code": "NSN"
         },
         {
+            "name": "North Island",
+            "code": "N"
+        },
+        {
             "name": "Northland",
             "code": "NTL"
         },
@@ -14373,6 +14473,10 @@
         {
             "name": "Region Auckland",
             "code": "AUK"
+        },
+        {
+            "name": "South Island",
+            "code": "S"
         },
         {
             "name": "Southland (Region)",
@@ -14405,8 +14509,16 @@
             "code": "DA"
         },
         {
+            "name": "Al Batinah",
+            "code": "BA"
+        },
+        {
             "name": "Al-Wusta",
             "code": "WU"
+        },
+        {
+            "name": "Ash Sharqiyah",
+            "code": "SH"
         },
         {
             "name": "Az-Zahirah",
@@ -16555,6 +16667,10 @@
         {
             "name": "St. Helena",
             "code": "HL"
+        },
+        {
+            "name": "Tristan da Cunha",
+            "code": "TA"
         }
     ],
     "SI": [
@@ -17783,6 +17899,10 @@
     ],
     "SY": [
         {
+            "name": "Damascus",
+            "code": "DI"
+        },
+        {
             "name": "Gouvernement al-Hasaka",
             "code": "HA"
         },
@@ -17801,10 +17921,6 @@
         {
             "name": "Gouvernement as-Suwaida",
             "code": "SU"
-        },
-        {
-            "name": "Gouvernement Damaskus",
-            "code": "DI"
         },
         {
             "name": "Gouvernement Dar’a",
@@ -19807,6 +19923,10 @@
             "code": "AK"
         },
         {
+            "name": "American Samoa",
+            "code": "AS"
+        },
+        {
             "name": "Arizona",
             "code": "AZ"
         },
@@ -19833,6 +19953,10 @@
         {
             "name": "Georgia",
             "code": "GA"
+        },
+        {
+            "name": "Guam",
+            "code": "GU"
         },
         {
             "name": "Hawaii",
@@ -19935,6 +20059,10 @@
             "code": "ND"
         },
         {
+            "name": "Northern Mariana Islands",
+            "code": "MP"
+        },
+        {
             "name": "Ohio",
             "code": "OH"
         },
@@ -19949,6 +20077,10 @@
         {
             "name": "Pennsylvania",
             "code": "PA"
+        },
+        {
+            "name": "Puerto Rico",
+            "code": "PR"
         },
         {
             "name": "Rhode Island",
@@ -19969,6 +20101,14 @@
         {
             "name": "Texas",
             "code": "TX"
+        },
+        {
+            "name": "U.S. Outlying Islands",
+            "code": "UM"
+        },
+        {
+            "name": "U.S. Virgin Islands",
+            "code": "VI"
         },
         {
             "name": "Utah",
