--- a/js/data/locale/si/regionnames.json
+++ b/js/data/locale/si/regionnames.json
@@ -2985,6 +2985,10 @@
             "code": "08"
         },
         {
+            "name": "Zanzan²",
+            "code": "ZZ"
+        },
+        {
             "name": "අබිජාන්",
             "code": "AB"
         },
@@ -3003,10 +3007,6 @@
         {
             "name": "වැලේ ඩු බන්ඩමා දිස්ත්‍රික්කය",
             "code": "VB"
-        },
-        {
-            "name": "සන්සන් කලාපය",
-            "code": "ZZ"
         },
         {
             "name": "සවනෙස් දිස්ත්‍රික්කය",
@@ -3119,140 +3119,140 @@
     ],
     "CN": [
         {
-            "name": "Fujian",
-            "code": "FJ"
-        },
-        {
-            "name": "Taiwan",
-            "code": "TW"
-        },
-        {
-            "name": "Tibet",
-            "code": "XZ"
-        },
-        {
-            "name": "අන්හුයි",
-            "code": "AH"
-        },
-        {
-            "name": "ඇතුල් මොන්ගෝලියාව",
-            "code": "NM"
-        },
-        {
-            "name": "කින්ග්හයි",
-            "code": "QH"
-        },
-        {
-            "name": "ක්සින්ග්ජියන්ග්",
-            "code": "XJ"
-        },
-        {
-            "name": "ගන්සූ",
-            "code": "GS"
-        },
-        {
-            "name": "ගුඅන්ක්සි සුආන්ග් ස්වාධීන කලාපය",
-            "code": "GX"
-        },
-        {
-            "name": "ගුයිෂු",
-            "code": "GZ"
-        },
-        {
-            "name": "ගුවන්ග්ඩොන්ග්",
-            "code": "GD"
-        },
-        {
-            "name": "චොන්කින්",
-            "code": "CQ"
-        },
-        {
-            "name": "ජියන්ග්ක්සි",
-            "code": "JX"
-        },
-        {
-            "name": "ජියන්ග්සු",
-            "code": "JS"
-        },
-        {
-            "name": "ජිලින්",
-            "code": "JL"
+            "name": "බෙයිජිං",
+            "code": "11"
         },
         {
             "name": "ටියන්ජින්",
-            "code": "TJ"
-        },
-        {
-            "name": "නින්ග්ක්සියා හුයි ස්‌වාධීන කලාපය",
-            "code": "NX"
-        },
-        {
-            "name": "බෙයිජිං",
-            "code": "BJ"
-        },
-        {
-            "name": "මකාවෝ",
-            "code": "MO"
-        },
-        {
-            "name": "යුනාන්",
-            "code": "YN"
-        },
-        {
-            "name": "ලියෝනින්ග්",
-            "code": "LN"
-        },
-        {
-            "name": "ශන්ක්සි",
-            "code": "SX"
-        },
-        {
-            "name": "ශාන්ක්සි",
-            "code": "SN"
-        },
-        {
-            "name": "ශැන්ඩොන්ග්",
-            "code": "SD"
-        },
-        {
-            "name": "ෂැංහයි",
-            "code": "SH"
-        },
-        {
-            "name": "සිචුවාන්",
-            "code": "SC"
-        },
-        {
-            "name": "සෙජියාන්ග්",
-            "code": "ZJ"
-        },
-        {
-            "name": "හයිනන්",
-            "code": "HI"
-        },
-        {
-            "name": "හුනාන්",
-            "code": "HN"
-        },
-        {
-            "name": "හුබෙයි",
-            "code": "HB"
-        },
-        {
-            "name": "හෙනන්",
-            "code": "HA"
+            "code": "12"
         },
         {
             "name": "හෙබෙයි",
-            "code": "HE"
+            "code": "13"
+        },
+        {
+            "name": "ශන්ක්සි",
+            "code": "14"
+        },
+        {
+            "name": "ඇතුල් මොන්ගෝලියාව",
+            "code": "15"
+        },
+        {
+            "name": "ලියෝනින්ග්",
+            "code": "21"
+        },
+        {
+            "name": "ජිලින්",
+            "code": "22"
         },
         {
             "name": "හෙලිඔන්ග්ජියාන්ග්",
-            "code": "HL"
+            "code": "23"
         },
         {
-            "name": "හොංකොං",
-            "code": "HK"
+            "name": "ෂැංහයි",
+            "code": "31"
+        },
+        {
+            "name": "ජියන්ග්සු",
+            "code": "32"
+        },
+        {
+            "name": "සෙජියාන්ග්",
+            "code": "33"
+        },
+        {
+            "name": "අන්හුයි",
+            "code": "34"
+        },
+        {
+            "name": "Fujian",
+            "code": "35"
+        },
+        {
+            "name": "ජියන්ග්ක්සි",
+            "code": "36"
+        },
+        {
+            "name": "ශැන්ඩොන්ග්",
+            "code": "37"
+        },
+        {
+            "name": "හෙනන්",
+            "code": "41"
+        },
+        {
+            "name": "හුබෙයි",
+            "code": "42"
+        },
+        {
+            "name": "හුනාන්",
+            "code": "43"
+        },
+        {
+            "name": "ගුවන්ග්ඩොන්ග්",
+            "code": "44"
+        },
+        {
+            "name": "ගුඅන්ක්සි සුආන්ග් ස්වාධීන කලාපය",
+            "code": "45"
+        },
+        {
+            "name": "හයිනන්",
+            "code": "46"
+        },
+        {
+            "name": "චොන්කින්",
+            "code": "50"
+        },
+        {
+            "name": "සිචුවාන්",
+            "code": "51"
+        },
+        {
+            "name": "ගුයිෂු",
+            "code": "52"
+        },
+        {
+            "name": "යුනාන්",
+            "code": "53"
+        },
+        {
+            "name": "Tibet",
+            "code": "54"
+        },
+        {
+            "name": "ශාන්ක්සි",
+            "code": "61"
+        },
+        {
+            "name": "ගන්සූ",
+            "code": "62"
+        },
+        {
+            "name": "කින්ග්හයි",
+            "code": "63"
+        },
+        {
+            "name": "නින්ග්ක්සියා හුයි ස්‌වාධීන කලාපය",
+            "code": "64"
+        },
+        {
+            "name": "ක්සින්ග්ජියන්ග්",
+            "code": "65"
+        },
+        {
+            "name": "Taiwan",
+            "code": "71"
+        },
+        {
+            "name": "Hong Kong SAR China",
+            "code": "91"
+        },
+        {
+            "name": "Macau SAR China",
+            "code": "92"
         }
     ],
     "CO": [
@@ -4889,8 +4889,20 @@
             "code": "O"
         },
         {
+            "name": "Balears Province",
+            "code": "PM"
+        },
+        {
             "name": "Basque Country",
             "code": "PV"
+        },
+        {
+            "name": "Canary Islands",
+            "code": "CN"
+        },
+        {
+            "name": "Cantabria Province",
+            "code": "S"
         },
         {
             "name": "Castile and León",
@@ -4927,6 +4939,10 @@
         {
             "name": "Murcia",
             "code": "MU"
+        },
+        {
+            "name": "Navarra",
+            "code": "NA"
         },
         {
             "name": "Segovia",
@@ -4993,10 +5009,6 @@
             "code": "CB"
         },
         {
-            "name": "කැන්ටබ්රියා²",
-            "code": "S"
-        },
-        {
             "name": "කැස්ටෙලෝන් පළාත",
             "code": "CS"
         },
@@ -5041,10 +5053,6 @@
             "code": "NC"
         },
         {
-            "name": "නවරේ²",
-            "code": "NA"
-        },
-        {
             "name": "පලේන්සියා පළාත",
             "code": "P"
         },
@@ -5063,10 +5071,6 @@
         {
             "name": "බලේයරික් දූපත්",
             "code": "IB"
-        },
-        {
-            "name": "බලේයරික් දූපත්²",
-            "code": "PM"
         },
         {
             "name": "බාසිලෝනා පළාත",
@@ -5196,6 +5200,10 @@
         }
     ],
     "FI": [
+        {
+            "name": "Åland Islands",
+            "code": "01"
+        },
         {
             "name": "දකුණු කරෙලියා",
             "code": "02"
@@ -5380,6 +5388,10 @@
         },
         {
             "name": "Brittany",
+            "code": "E"
+        },
+        {
+            "name": "Brittany",
             "code": "BRE"
         },
         {
@@ -5391,8 +5403,28 @@
             "code": "CVL"
         },
         {
+            "name": "Clipperton Island",
+            "code": "CP"
+        },
+        {
+            "name": "Corsica",
+            "code": "H"
+        },
+        {
             "name": "Corsica",
             "code": "COR"
+        },
+        {
+            "name": "French Guiana",
+            "code": "GF"
+        },
+        {
+            "name": "French Polynesia",
+            "code": "PF"
+        },
+        {
+            "name": "French Southern Territories",
+            "code": "TF"
         },
         {
             "name": "Grand-Est",
@@ -5401,6 +5433,10 @@
         {
             "name": "Guadeloupe",
             "code": "GUA"
+        },
+        {
+            "name": "Guadeloupe²",
+            "code": "GP"
         },
         {
             "name": "Hauts-de-France",
@@ -5415,8 +5451,20 @@
             "code": "LRE"
         },
         {
+            "name": "Martinique",
+            "code": "MQ"
+        },
+        {
             "name": "Mayotte",
             "code": "MAY"
+        },
+        {
+            "name": "Mayotte²",
+            "code": "YT"
+        },
+        {
+            "name": "New Caledonia",
+            "code": "NC"
         },
         {
             "name": "Normandie",
@@ -5437,6 +5485,26 @@
         {
             "name": "Provence-Alpes-Côte-d’Azur",
             "code": "PAC"
+        },
+        {
+            "name": "Réunion",
+            "code": "RE"
+        },
+        {
+            "name": "St. Barthélemy",
+            "code": "BL"
+        },
+        {
+            "name": "St. Martin",
+            "code": "MF"
+        },
+        {
+            "name": "St. Pierre & Miquelon",
+            "code": "PM"
+        },
+        {
+            "name": "Wallis & Futuna",
+            "code": "WF"
         },
         {
             "name": "අයින්",
@@ -6463,6 +6531,10 @@
             "code": "ELS"
         },
         {
+            "name": "Oxfordshire",
+            "code": "OXF"
+        },
+        {
             "name": "Pembrokeshire",
             "code": "PEM"
         },
@@ -6737,10 +6809,6 @@
         {
             "name": "එඩින්බරෝ",
             "code": "EDH"
-        },
-        {
-            "name": "ඔක්ස්ෆර්ඩ්",
-            "code": "OXF"
         },
         {
             "name": "කාඩිෆ්",
@@ -10933,6 +11001,10 @@
             "name": "Diekirch"
         },
         {
+            "code": "D",
+            "name": "Diekirch²"
+        },
+        {
             "code": "EC",
             "name": "Echternach"
         },
@@ -10945,8 +11017,16 @@
             "name": "Grevenmacher"
         },
         {
+            "code": "G",
+            "name": "Grevenmacher²"
+        },
+        {
             "code": "LU",
             "name": "Luxembourg"
+        },
+        {
+            "code": "L",
+            "name": "Luxembourg²"
         },
         {
             "code": "ME",
@@ -12843,64 +12923,68 @@
     ],
     "MR": [
         {
-            "name": "හොඩ්හ් එච් චාර්ගුයි",
-            "code": "01"
-        },
-        {
-            "name": "හොද්හ් එල් ඝර්බි කලාපය",
-            "code": "02"
-        },
-        {
-            "name": "අස්සබා කලාපය",
-            "code": "03"
-        },
-        {
-            "name": "ගර්ගොල් කලාපය",
-            "code": "04"
-        },
-        {
-            "name": "බ්‍රක්නා කලාපය",
-            "code": "05"
-        },
-        {
-            "name": "ට්‍රර්සා කලාපය",
-            "code": "06"
-        },
-        {
-            "name": "අඩ්රාර් කලාපය",
-            "code": "07"
-        },
-        {
-            "name": "ඩක්ලෙට් නොවාධිබු",
-            "code": "08"
-        },
-        {
-            "name": "ටගන්ට් කලාපය",
-            "code": "09"
-        },
-        {
-            "name": "ගුයිඩිමකා පළාත",
-            "code": "10"
-        },
-        {
-            "name": "ටිරිස් සෙම්මොඋර් කලාපය",
-            "code": "11"
-        },
-        {
-            "name": "ඉන්චිරි කලාපය",
-            "code": "12"
-        },
-        {
-            "name": "Nouakchott Ouest",
-            "code": "13"
+            "name": "Nouakchott",
+            "code": "NKC"
         },
         {
             "name": "Nouakchott Nord",
             "code": "14"
         },
         {
+            "name": "Nouakchott Ouest",
+            "code": "13"
+        },
+        {
             "name": "Nouakchott Sud",
             "code": "15"
+        },
+        {
+            "name": "අඩ්රාර් කලාපය",
+            "code": "07"
+        },
+        {
+            "name": "අස්සබා කලාපය",
+            "code": "03"
+        },
+        {
+            "name": "ඉන්චිරි කලාපය",
+            "code": "12"
+        },
+        {
+            "name": "ගර්ගොල් කලාපය",
+            "code": "04"
+        },
+        {
+            "name": "ගුයිඩිමකා පළාත",
+            "code": "10"
+        },
+        {
+            "name": "ටගන්ට් කලාපය",
+            "code": "09"
+        },
+        {
+            "name": "ටිරිස් සෙම්මොඋර් කලාපය",
+            "code": "11"
+        },
+        {
+            "name": "ට්‍රර්සා කලාපය",
+            "code": "06"
+        },
+        {
+            "name": "ඩක්ලෙට් නොවාධිබු",
+            "code": "08"
+        },
+        {
+            "name": "බ්‍රක්නා කලාපය",
+            "code": "05"
+        },
+        {
+            "name": "හොඩ්හ් එච් චාර්ගුයි",
+            "code": "01"
+        },
+        {
+            "name": "හොද්හ් එල් ඝර්බි කලාපය",
+            "code": "02"
         }
     ],
     "MT": [
@@ -14047,8 +14131,20 @@
     ],
     "NL": [
         {
+            "name": "Aruba",
+            "code": "AW"
+        },
+        {
+            "name": "Curaçao",
+            "code": "CW"
+        },
+        {
             "name": "Saba",
             "code": "BQ2"
+        },
+        {
+            "name": "Sint Maarten",
+            "code": "SX"
         },
         {
             "name": "උට්‍රෙච්ට්",
@@ -14335,6 +14431,14 @@
             "code": "NSN"
         },
         {
+            "name": "North Island",
+            "code": "N"
+        },
+        {
+            "name": "South Island",
+            "code": "S"
+        },
+        {
             "name": "ඔටාගෝ කලාපය",
             "code": "OTA"
         },
@@ -14400,6 +14504,14 @@
         }
     ],
     "OM": [
+        {
+            "name": "Al Batinah",
+            "code": "BA"
+        },
+        {
+            "name": "Ash Sharqiyah",
+            "code": "SH"
+        },
         {
             "name": "Shamal al Batinah",
             "code": "BS"
@@ -16548,6 +16660,10 @@
         }
     ],
     "SH": [
+        {
+            "name": "Tristan da Cunha",
+            "code": "TA"
+        },
         {
             "name": "අස්සෙන්ෂන් දුපත",
             "code": "AC"
@@ -19798,6 +19914,30 @@
         }
     ],
     "US": [
+        {
+            "name": "American Samoa",
+            "code": "AS"
+        },
+        {
+            "name": "Guam",
+            "code": "GU"
+        },
+        {
+            "name": "Northern Mariana Islands",
+            "code": "MP"
+        },
+        {
+            "name": "Puerto Rico",
+            "code": "PR"
+        },
+        {
+            "name": "U.S. Outlying Islands",
+            "code": "UM"
+        },
+        {
+            "name": "U.S. Virgin Islands",
+            "code": "VI"
+        },
         {
             "name": "අයෝවා",
             "code": "IA"
